feat: corrigir submissoes de atividade e fechar passo com XP (#160)
